chore: add rate-limiting plugin to kong

--- a/kong/declarative/kong.yml
+++ b/kong/declarative/kong.yml
@@ -7,3 +7,10 @@ services:
       - name: get-ping
         paths:
           - /ping
+
+plugins:
+  - name: rate-limiting
+    service: rest-ping
+    config:
+      minute: 5
+      policy: local
