--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,14 +35,32 @@ services:
       dockerfile: ./src/main/docker/Dockerfile.jvm
     networks:
       - "kong-net"
-    ports:
-      - "8080"
-      # - "8080:8080"
+    # ports:
+    #- "8080"
+    #- "8080:8080"
     # environment:
     #   JAVA_OPTS: "-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
     #   JAVA_APP_JAR: "/deployments/quarkus-kotlin-rest-api-1.0.0-SNAPSHOT.jar"
     volumes:
       - ./apps/quarkus-kotlin-rest-api/target/quarkus-app:/deployments
+  zookeeper:
+    image: debezium/zookeeper:1.8
+    ports:
+      - "3888:3888"
+      - "2888:2888"
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: debezium/kafka:1.8
+    ports:
+      - "9092:9092"
+    links:
+      - "zookeeper:zookeeper"
+    environment:
+      - ZOOKEEPER_CONNECT=zookeeper:2181
+      # - ADVERTISED_HOST_NAME=172.29.0.1
+      - ALLOW_PLAINTEXT_LISTENER=yes
 
 networks:
   kong-net:
