--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,7 @@ services:
     volumes:
       - ./apps/quarkus-kotlin-rest-api/target/quarkus-app:/deployments
   zookeeper:
+    container_name: "zookeeper"
     image: debezium/zookeeper:1.8
     ports:
       - "3888:3888"
@@ -52,15 +53,27 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
+    container_name: "kafka"
     image: debezium/kafka:1.8
     ports:
       - "9092:9092"
-    links:
-      - "zookeeper:zookeeper"
+    # links:
+    #   - "zookeeper:zookeeper"
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
       # - ADVERTISED_HOST_NAME=172.29.0.1
       - ALLOW_PLAINTEXT_LISTENER=yes
+  debezium_connect:
+    container_name: "connect"
+    image: debezium/connect:1.8
+    ports:
+      - "8083:8083"
+    environment:
+      - BOOTSTRAP_SERVERS=kafka:9092
+      - GROUP_ID=1
+      - CONFIG_STORAGE_TOPIC=my_connect_configs
+      - OFFSET_STORAGE_TOPIC=my_connect_offsets
+      - STATUS_STORAGE_TOPIC=my_connect_statuses
 
 networks:
   kong-net:
