Inclusao de liquibase

--- a/apps/quarkus-kotlin-rest-api/pom.xml
+++ b/apps/quarkus-kotlin-rest-api/pom.xml
@@ -29,6 +29,17 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+    <!-- Liquibase specific dependencies -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-liquibase</artifactId>
+    </dependency>
+
+    <!-- JDBC driver dependencies -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-postgresql</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-kotlin</artifactId>
