--- a/apps/quarkus-kotlin-rest-api/src/main/resources/application.properties
+++ b/apps/quarkus-kotlin-rest-api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/postgres
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/gisa
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
