--- a/apps/quarkus-kotlin-rest-api/src/main/resources/liquibase.properties
+++ b/apps/quarkus-kotlin-rest-api/src/main/resources/liquibase.properties
@@ -4,7 +4,7 @@ url=jdbc:postgresql://localhost:5432/gisa
 username=postgres
 password=postgres
 driver=org.postgresql.Driver
-outputChangeLogFile=src/main/resources/db/ChangeLog-db.xml
-changeLogFile=src/main/resources/db/ChangeLog-db.xml
-databaseChangeLogTableName=databasechangelog
-databaseChangeLogLockTableName=databasechangeloglock
+#Utilizado pelo liquibase:generateChangeLog
+outputChangeLogFile=src/main/resources/db/changeLog-baseline.xml 
+#Utilizado pelo liquibase:update
+changeLogFile=src/main/resources/db/changeLog.xml  
