--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -83,6 +83,22 @@ services:
     #   JAVA_APP_JAR: "/deployments/gisa-informacoes-cadastrais-1.0.0-SNAPSHOT.jar"
     volumes:
       - ./apps/gisa-informacoes-cadastrais/target/quarkus-app:/deployments
+  legacy_db:
+    image: debezium/postgres:14
+    environment:
+      - POSTGRES_USER=legacy_user
+      - POSTGRES_DB=legacy_db
+      - POSTGRES_PASSWORD=abc123!@#
+    ports:
+      - 5433:5432
+    healthcheck:
+      test: "pg_isready -U legacy_user -d legacy_db"
+      interval: 2s
+      timeout: 20s
+      retries: 10
+    volumes:
+      - ./scripts/legacy_db:/docker-entrypoint-initdb.d/
+      - "legacy_db:/var/lib/postgresql/data"
   zookeeper:
     container_name: "zookeeper"
     image: debezium/zookeeper:1.8
@@ -94,6 +110,8 @@ services:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
     container_name: "kafka"
+    depends_on:
+      - zookeeper
     image: debezium/kafka:1.8
     ports:
       - "9092:9092"
@@ -123,3 +141,4 @@ networks:
 volumes:
   postgres:
   pgadmin:
+  legacy_db:
