chore: add some entities

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -4,9 +4,11 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/gisa
+quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
+quarkus.liquibase.clean-at-start=true
 
 # Liquibase optional config properties
 # quarkus.liquibase.change-log=db/changeLog.xml
