chore: add associado by id resource

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-quarkus.liquibase.clean-at-start=true
+quarkus.liquibase.clean-at-start=false
 
 # Liquibase optional config properties
 # quarkus.liquibase.change-log=db/changeLog.xml
