chore: add swagger

--- a/apps/gisa-informacoes-cadastrais/pom.xml
+++ b/apps/gisa-informacoes-cadastrais/pom.xml
@@ -67,6 +67,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -84,13 +88,13 @@
   <build>
     <plugins>
       <plugin>
-          <groupId>org.liquibase</groupId>
-          <artifactId>liquibase-maven-plugin</artifactId>
-          <version>3.4.1</version>
-          <configuration>                  
-              <propertyFile>src/main/resources/liquibase.properties</propertyFile>
-          </configuration>                
-      </plugin>     
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>3.4.1</version>
+        <configuration>
+          <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
