--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -8,7 +8,10 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-quarkus.liquibase.clean-at-start=false
+%dev.quarkus.liquibase.clean-at-start=true
+
+quarkus.swagger-ui.always-include=true
+quarkus.http.host=0.0.0.0
 
 # Liquibase optional config properties
 # quarkus.liquibase.change-log=db/changeLog.xml
