--- a/apps/gisa-ui/package.json
+++ b/apps/gisa-ui/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
