--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: '3.8'
 services:
-  react-dev:
-    container_name: ui-desenv
-    build:
-        context: ./apps/gisa-ui
-        dockerfile: Dockerfile.react-dev
-    volumes:
-        - './apps/gisa-ui:/app'
-        - '/app/node_modules'
-    ports:
-        - '3000:3000'
-    environment:
-        - NODE_ENV=development
+  # react-dev:
+  #   container_name: ui-desenv
+  #   build:
+  #       context: ./apps/gisa-ui
+  #       dockerfile: Dockerfile.react-dev
+  #   volumes:
+  #       - './apps/gisa-ui:/app'
+  #       - '/app/node_modules'
+  #   ports:
+  #       - '3000:3000'
+  #   environment:
+  #       - NODE_ENV=development
 
   react-prod:
       container_name: ui-prod
@@ -95,9 +95,8 @@ services:
       dockerfile: ./src/main/docker/Dockerfile.jvm
     networks:
       - "kong-net"
-    # ports:
-    #- "8080"
-    #- "8080:8080"
+    ports:
+      - "8080:8080"
     # environment:
     #   JAVA_OPTS: "-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
     #   JAVA_APP_JAR: "/deployments/gisa-informacoes-cadastrais-1.0.0-SNAPSHOT.jar"
