chore: adjust databases connections

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -2,13 +2,22 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/gisa
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/gisa
 quarkus.hibernate-orm.database.generation=none
+
+# configure the legacy db connection
+quarkus.datasource.legacy.db-kind=postgresql
+quarkus.datasource.legacy.username=postgres
+quarkus.datasource.legacy.password=postgres
+quarkus.datasource.legacy.jdbc.url=jdbc:postgresql://localhost:5433/gisa
+%prod.quarkus.datasource.legacy.jdbc.url=jdbc:postgresql://legacy_db:5432/gisa
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
 %dev.quarkus.liquibase.clean-at-start=true
+quarkus.liquibase.legacy.migrate-at-start=true
+%dev.quarkus.liquibase.legacy.clean-at-start=true
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.host=0.0.0.0
