chore: remove generator from main project

--- a/apps/gerador-dados-legado/src/main/resources/application.properties
+++ b/apps/gerador-dados-legado/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# configure application port
+quarkus.http.port=8081
+
 # configure your datasource
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
@@ -9,5 +12,3 @@ quarkus.hibernate-orm.database.generation=none
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
 %dev.quarkus.liquibase.clean-at-start=true
-quarkus.liquibase.legacy.migrate-at-start=true
-%dev.quarkus.liquibase.legacy.clean-at-start=true
