chore: persist information from kafka

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-%dev.quarkus.liquibase.clean-at-start=true
+%dev.quarkus.liquibase.clean-at-start=false
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.host=0.0.0.0
@@ -26,3 +26,12 @@ quarkus.http.host=0.0.0.0
 # quarkus.liquibase.liquibase-catalog-name=liquibaseCatalog
 # quarkus.liquibase.liquibase-schema-name=liquibaseSchema
 # quarkus.liquibase.liquibase-tablespace-name=liquibaseSpace
+
+# Kafka configurations
+kafka.bootstrap.servers=localhost:9092
+%prod.kafka.bootstrap.servers=kafka:9092
+mp.messaging.incoming.associados.connector=smallrye-kafka
+mp.messaging.incoming.associados.topic=legacy.public.associado
+mp.messaging.incoming.associados.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#mp.messaging.incoming.associados.value.deserializer=org.apache.kafka.common.serialization.Serde
+mp.messaging.incoming.associados.auto.offset.reset=earliest
