--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -30,8 +30,15 @@ quarkus.http.host=0.0.0.0
 # Kafka configurations
 kafka.bootstrap.servers=localhost:9092
 %prod.kafka.bootstrap.servers=kafka:9092
+
+# Kafka - Topic: Associados
 mp.messaging.incoming.associados.connector=smallrye-kafka
 mp.messaging.incoming.associados.topic=legacy.public.associado
 mp.messaging.incoming.associados.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#mp.messaging.incoming.associados.value.deserializer=org.apache.kafka.common.serialization.Serde
 mp.messaging.incoming.associados.auto.offset.reset=earliest
+
+# Kafka - Topic: Conveniados
+mp.messaging.incoming.conveniados.connector=smallrye-kafka
+mp.messaging.incoming.conveniados.topic=legacy.public.conveniado
+mp.messaging.incoming.conveniados.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.conveniados.auto.offset.reset=earliest
