chore: refactor entities

--- a/apps/gerador-dados-legado/src/main/resources/application.properties
+++ b/apps/gerador-dados-legado/src/main/resources/application.properties
@@ -11,4 +11,4 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-%dev.quarkus.liquibase.clean-at-start=true
+%dev.quarkus.liquibase.clean-at-start=false
