--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -42,3 +42,21 @@ mp.messaging.incoming.conveniados.connector=smallrye-kafka
 mp.messaging.incoming.conveniados.topic=legacy.public.conveniado
 mp.messaging.incoming.conveniados.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.conveniados.auto.offset.reset=earliest
+
+# Kafka - Topic: Prestador
+mp.messaging.incoming.prestador.connector=smallrye-kafka
+mp.messaging.incoming.prestador.topic=legacy.public.prestador
+mp.messaging.incoming.prestador.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.prestador.auto.offset.reset=earliest
+
+# Kafka - Topic: Formacao
+mp.messaging.incoming.formacao.connector=smallrye-kafka
+mp.messaging.incoming.formacao.topic=legacy.public.formacao
+mp.messaging.incoming.formacao.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.formacao.auto.offset.reset=earliest
+
+# Kafka - Topic: Atendimento
+mp.messaging.incoming.atendimento.connector=smallrye-kafka
+mp.messaging.incoming.atendimento.topic=legacy.public.atendimento
+mp.messaging.incoming.atendimento.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.atendimento.auto.offset.reset=earliest
