chore: add remocao e autorizacao consumer

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-%dev.quarkus.liquibase.clean-at-start=false
+%dev.quarkus.liquibase.clean-at-start=true
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.host=0.0.0.0
@@ -60,3 +60,15 @@ mp.messaging.incoming.atendimento.connector=smallrye-kafka
 mp.messaging.incoming.atendimento.topic=legacy.public.atendimento
 mp.messaging.incoming.atendimento.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.atendimento.auto.offset.reset=earliest
+
+# Kafka - Topic: Autorizacao
+mp.messaging.incoming.autorizacao.connector=smallrye-kafka
+mp.messaging.incoming.autorizacao.topic=legacy.public.autorizacao
+mp.messaging.incoming.autorizacao.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.autorizacao.auto.offset.reset=earliest
+
+# Kafka - Topic: Remocao
+mp.messaging.incoming.remocao.connector=smallrye-kafka
+mp.messaging.incoming.remocao.topic=legacy.public.remocao
+mp.messaging.incoming.remocao.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.remocao.auto.offset.reset=earliest
