--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# configure application port
+# quarkus.http.port=80
+
 # configure your datasource
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
@@ -8,7 +11,7 @@ quarkus.hibernate-orm.database.generation=none
 
 # Liquibase minimal config properties
 quarkus.liquibase.migrate-at-start=true
-%dev.quarkus.liquibase.clean-at-start=true
+%dev.quarkus.liquibase.clean-at-start=false
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.host=0.0.0.0
