--- a/apps/gisa-ui/package.json
+++ b/apps/gisa-ui/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
+    "dayjs": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.6",
