chore: add CarteirinhasEmitidasConsumer

--- a/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
+++ b/apps/gisa-informacoes-cadastrais/src/main/resources/application.properties
@@ -75,3 +75,9 @@ mp.messaging.incoming.remocao.connector=smallrye-kafka
 mp.messaging.incoming.remocao.topic=legacy.public.remocao
 mp.messaging.incoming.remocao.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.remocao.auto.offset.reset=earliest
+
+# Kafka - Topic: Carteirinhas
+mp.messaging.incoming.carteirinha.connector=smallrye-kafka
+mp.messaging.incoming.carteirinha.topic=legacy.public.carteirinhas_emitidas
+mp.messaging.incoming.carteirinha.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.carteirinha.auto.offset.reset=earliest
